12 Feb 2008 Fixes for SPKA, BASR, TBEDR, PR - Paul Leisy
12 Feb 2008 dyngui tweaks: new def devlist fmt, new debug_cd_cmd hook - Fish
11 Feb 2008 Fixed intermediate errors cmpsc - Bernard
07 Feb 2008 Solaris build support by Jeff Savit - Roger Bowler
24 Jan 2008 Fix invalidate_tlbe processing - Paul Leisy by Greg
23 Jan 2008 Fix and optimize TR instruction - Greg
23 Jan 2008 Modifications for VS9 C++ 2008 Express by Charlie Brint - Roger Bowler
21 Jan 2008 Activate ETF3 and ETF2/ETF3-Enhancements in ESA/390 mode - Roger Bowler
21 Jan 2008 Permit Extended-Translation-Facility-3 to be activated in S/370 and ESA/390 modes - Roger Bowler
16 Jan 2008 Data exception for only UNPRECEDED nonzero bit34 ece entries - Fish
14 Jan 2008 Additional ISO-8859-1 to European EBCDIC codepages - Roger Bowler
11 Jan 2008 new 'ctc' command to enable/disable debug option on demand - Fish
03 Jan 2008 sf commands update - Greg Smith
01 Jan 2008 Data exception on nonzero bit34 in ece entry - Bernard van der Helm
31 Dec 2007 Data exceptions on fetching ece, cce and sd1 - Bernard van der Helm
31 Dec 2007 Data excep in CMPSC expansion psl and cls = 0 - Bernard van der Helm
29 Dec 2007 Some errors in UTF translation - Bernard van der Helm
29 Dec 2007 Tweak OPTION_MIPS_COUNTING tweak to prevent crash - Fish
24 Dec 2007 Compression check output, input swapped to input, output - Bernard van der Helm
11 Dec 2007 Enable SENSE ID CCW for 2703,3410,3420
10 Dec 2007 Tweaks to OPTION_MIPS_COUNTING processing - Greg
02 Dec 2007 Permit Extended-Translation-Facility-2 to be activated in S/370 mode - Roger Bowler
02 Dec 2007 Enable B9xx,EBxx opcodes in S/370 mode for ETF2 - Roger Bowler
02 Dec 2007 Permit Extended-Translation facility to be activated in S/370 mode - Roger Bowler
02 Dec 2007 Permit Compare-and-Move-Extended facility to be activated in S/370 mode - Roger Bowler
01 Dec 2007 Fix cckdcdsk/cckdcomp/cckdutil no message o/p issue - Fish